expenses-ansible-roles

--- a/inventory.ini
+++ b/inventory.ini
@@ -2,11 +2,11 @@
 mysql.aidevops.website
 
 [frontend]
-frontend.bigmatrix.in
+frontend.aidevops.website
 
 
 [backend]
-backend.bigmatrix.in
+backend.aidevops.website
 
 [all:vars]
 ansible_user=ec2-user
